--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@font-face {
+  font-family: "Louis George Cafe";
+  src: url("~/public/fonts/Louis George Cafe.ttf") format("truetype"),
+    url("~/public/fonts/Louis George Cafe Bold.ttf") format("truetype"),
+    url("~/public/fonts/Louis George Cafe Bold Italic.ttf") format("truetype"),
+    url("~/public/fonts/Louis George Cafe Light.ttf") format("truetype"),
+    url("~/public/fonts/Louis George Cafe Light Italic.ttf") format("truetype");
+}
+
+html {
+  font-family: "Louis George Cafe", sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: inherit;
+  box-sizing: inherit;
+}
