--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -22,7 +22,7 @@
   background-size: cover;
   background-position: inherit;
   background-repeat: no-repeat;
-  background-image: url(./bg.png);
+  background-image: url(../../assets/homePageBackground.png);
 }
 
 .header {
@@ -41,6 +41,7 @@
 
 .app-logo {
   width: 200px;
+  height: 70px;
   cursor: pointer;
   margin-top: 10px;
 }
@@ -56,7 +57,6 @@
   list-style: none;
   line-height: 80px;
   display: inline-block;
-  font-family: inherit;
 }
 
 .container nav ul li a {
