--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -76,6 +76,7 @@
   width: 385px;
   height: 60px;
   padding-left: 3px;
+  text-align: center;
   position: absolute;
   border-radius: 6px;
   box-sizing: border-box;
@@ -100,6 +101,7 @@
   top: 450px;
   width: 385px;
   height: 60px;
+  text-align: center;
   position: absolute;
   border-radius: 6px;
   box-sizing: border-box;
