--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,26 +1,27 @@
-.login-container {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  background-size: contain;
-  background-position: right;
-  background-repeat: no-repeat;
-  background-image: url(../../assets/loginPageBackground.png);
-}
-
 .app-logo {
   width: 200px;
   height: 70px;
   cursor: pointer;
-  padding-left: 2%;
   margin-top: 10px;
+  margin-right: 1000px;
+}
+
+.login-container {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: -120px;
+  background-position-y: center;
+  background-image: url(../../assets/loginPageBackground.png);
 }
 
 .cart-icon {
-  width: 40px;
-  height: 40px;
-  left: 570px;
   top: 30px;
+  width: 40px;
+  left: 570px;
+  height: 40px;
   opacity: 0.7;
   border-radius: 6px;
   position: absolute;
@@ -38,21 +39,17 @@
 
 .login-container h1 {
   left: 8%;
-  top: 10%;
   right: 60%;
   height: 44px;
   line-height: 44px;
-  position: absolute;
   font-size: 1.875rem;
   letter-spacing: -0.64px;
 }
 
 .login-container h2 {
-  top: 20%;
-  left: 9%;
   color: #032d23;
+  margin-left: 20px;
   font-size: 3.75rem;
-  position: absolute;
 }
 
 .username-input {
@@ -60,7 +57,7 @@
   left: 8%;
   width: 385px;
   height: 60px;
-  position: absolute;
+  margin-top: 50px;
   border-radius: 6px;
   box-sizing: border-box;
   border: 2px solid #032d23;
@@ -71,13 +68,11 @@
 }
 
 .username-input {
-  top: 370px;
   left: 8%;
   width: 385px;
   height: 60px;
   padding-left: 3px;
   text-align: center;
-  position: absolute;
   border-radius: 6px;
   box-sizing: border-box;
   border: 2px solid #032d23;
@@ -101,8 +96,8 @@
   top: 450px;
   width: 385px;
   height: 60px;
+  margin-top: 20px;
   text-align: center;
-  position: absolute;
   border-radius: 6px;
   box-sizing: border-box;
   border: 2px solid #032d23;
@@ -118,12 +113,12 @@
 }
 
 .text-div {
-  margin-top: 24%;
+  margin-top: 20px;
   color: #032d23;
 }
 
 .checkbox-input {
-  margin-left: 155px;
+  margin-left: 10px;
 }
 
 .checkbox-input:hover {
@@ -131,26 +126,34 @@
 }
 
 .checkbox-text {
-  margin-left: 2px;
+  margin-left: 10px;
 }
 
 .actions a {
   color: #032d23;
-  margin-left: 6%;
   font-weight: bold;
+  margin-left: 100px;
   text-decoration: none;
 }
 
-.actions .login-button {
+.login-button {
   width: 385px;
   height: 60px;
-  margin-left: 8%;
-  margin-top: 3%;
+  margin-top: 20px;
   font-size: 1.2rem;
 }
 
-.actions .login-button:hover {
+.login-button:hover {
   cursor: pointer;
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
+}
+
+.login-container {
+  margin-left: 120px;
+}
+
+.alert {
+  color: red;
+  margin-left: 80px;
 }
