--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,11 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 :root {
-  --txt-white: #fff;
   --main-bg: #ffffff;
   --second-bg: #fafafb;
   --txt-color: #455560;
-
+  --txt-white: #fff;
   --main-color: #00999b;
   --second-color: #05726b;
   --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -34,11 +31,11 @@
   --main-color-green: #29cc97;
   --second-color-green: #4caf50;
 
-  --main-color-orange: #d68102;
-  --second-color-orange: #fca11a;
+  --main-color-yellow: #fec400;
+  --second-color-yellow: #fca11a;
 
-  --border-radius: 15px;
   --sidebar-width: 300px;
+  --border-radius: 15px;
   --topnav-height: 110px;
   --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
@@ -54,12 +51,11 @@ body {
   letter-spacing: 0.7px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Louis George Cafe", sans-serif;
 }
 
 a {
-  color: unset;
   text-decoration: none;
+  color: unset;
 }
 
 a:hover {
@@ -78,8 +74,8 @@ ul {
 }
 
 input {
-  outline: 0;
   border: 2px solid transparent;
+  outline: 0;
 }
 
 input:focus {
@@ -143,9 +139,4 @@ input:focus {
 .green-color {
   color: #fff;
   background-color: var(--main-color-green);
-}
-
-.orange-color {
-  color: #fff;
-  background-color: var(--main-color-orange);
 }
