--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -1,7 +1,9 @@
 .topnav {
   padding: 30px;
   display: flex;
+  color: white;
   align-items: center;
+  background-color: #00999b;
   height: var(--topnav-height);
   justify-content: space-between;
 }
