--- a/src/components/ui/Modal/Modal.module.css
+++ b/src/components/ui/Modal/Modal.module.css
@@ -11,13 +11,24 @@
 .modal {
   position: fixed;
   top: 15vh;
-  left: 5%;
-  width: 90%;
+  left: 15%;
+  width: 70%;
   height: 70vh;
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
+}
+
+.content {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.overflow-fix {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
 }
