--- a/src/components/Customers/CustomerModal.module.css
+++ b/src/components/Customers/CustomerModal.module.css
@@ -1,11 +1,12 @@
 .actions {
-  display: flex;
-  justify-content: space-between;
-  max-width: 300px;
+  max-width: fit-content;
   margin-top: 30px;
   margin-left: auto;
 }
 
+.actions button {
+  margin-left: 6px;
+}
 header h2 {
   text-align: center;
   font-size: 2rem;
