--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -70,6 +70,7 @@
   overflow: hidden;
   border-radius: 50%;
   margin-right: 10px;
+  background-color: var(--main-bg);
 }
 
 .topnav__right-user__image > img {
