Made some changes
- Removed CustomerStorePage and CustomerServicesPage from home page nav bar.

- Updated succesful edition alert message on all app modals.

- Implemented services fetch.

- Implemented products and services edition and detail visualization.

--- a/src/components/List/ListItem/ListItem.module.css
+++ b/src/components/List/ListItem/ListItem.module.css
@@ -1,3 +1,8 @@
+.listItem-wrap {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .listItem-wrap img {
   display: block;
   max-width: 100%;
@@ -5,7 +10,6 @@
   margin-left: auto;
   margin-right: auto;
   border-radius: 15px;
-  background-color: white;
 }
 
 .listItem-wrap header {
@@ -34,4 +38,9 @@
 .listItem-wrap footer p:first-child span {
   font-weight: 600;
   color: rgba(0, 0, 0, 0.26);
+}
+
+.row-options {
+  text-align: center;
+  position: relative;
 }
