--- a/src/components/Employees/EmployeeModal.module.css
+++ b/src/components/Employees/EmployeeModal.module.css
@@ -40,3 +40,24 @@ select[disabled] {
   border: 1.25px solid #1f1f1f;
   color: #1f1f1f;
 }
+
+main .success-message {
+  margin-top: 1rem;
+  font-weight: bold;
+  font-size: larger;
+  text-align: center;
+  background: linear-gradient(
+    to right,
+    #ef5350,
+    #f48fb1,
+    #7e57c2,
+    #2196f3,
+    #26c6da,
+    #43a047,
+    #eeff41,
+    #f9a825,
+    #ff5722
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
