Modified TopNav b. color
Modified TopNav background color to change whenever the theme color is changed.

--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -3,9 +3,9 @@
   display: flex;
   color: white;
   align-items: center;
-  background-color: #00999b;
   height: var(--topnav-height);
   justify-content: space-between;
+  background-color: var(--main-color);
 }
 
 .topnav__search {
